# Abaqus_MCP

./: .gitignore  LICENSE  README.md  SECURITY.md  mcp_config.example.json  pyproject.toml  requirements.txt  start_abaqus_mcp.ps1
abaqus_mcp/: __init__.py  config.py  core.py  odb_extract.py  server.py
tests/: test_abaqus_mcp_core.py
