[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abaqus-mcp-server"
version = "0.1.0"
description = "MCP server for running and inspecting Abaqus jobs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.27.1,<2.0.0",
  "starlette>=0.40,<0.49",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
abaqus-mcp = "abaqus_mcp.server:main"

[tool.setuptools.packages.find]
include = ["abaqus_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
